kustomization/components/networkpolicy-allow-forgejo-runners-to-forgejo-runner-dns/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forgejo-runners-to-forgejo-runner-dns-networkpolicy
spec:
  egress:
    - ports:
        - port: dns-tcp
          protocol: TCP
        - port: dns-udp
          protocol: UDP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo-runner-dns
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
  podSelector: {}
  policyTypes:
    - Egress
